spacing issues fixed on logo icon and contact

--- a/src/components/BlogLogo/BlogLogo.css
+++ b/src/components/BlogLogo/BlogLogo.css
@@ -15,7 +15,7 @@
     width: 35px;
 }
 
-.blog-logo span {
+.blog-logo div {
     color: white;
     opacity: 0.9;
     margin-left: 5px;
